# orbi

./: .gitignore  DOCKER.md  Makefile  README.md  SETUP.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pubspec.yaml
android/app/: build.gradle.kts
be/: .env.example  Dockerfile  GEMINI_PIPELINE.md  QUICKSTART.md  README.md  TESTING.md  TEST_RESULTS.md  celery_app.py  config.py  main.py  pyproject.toml  pytest.ini  run_tests.sh
be/api/: dependencies.py  models.py
be/database/: __init__.py  models.py  session.py  vector_store.py
be/services/: audio_processor.py  diarization.py  gemini_audio_processor.py  insights_generator.py  speaker_manager.py  transcription.py
be/tasks/: process_audio.py
be/tests/: conftest.py  test_api.py  test_audio_utils.py  test_database.py  test_integration.py  test_speaker_manager.py  test_vector_store.py
be/utils/: audio_utils.py  llm_client.py
frontend/: pubspec.yaml
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/core/: constants.dart  theme.dart
frontend/lib/models/: app_config_model.dart  job_status.dart  (+4 more)
frontend/linux/: CMakeLists.txt
frontend/test/: widget_test.dart
frontend/windows/: CMakeLists.txt
ios/Runner/: Info.plist
lib/core/: constants.dart
lib/models/: audio_file_model.dart
lib/providers/: file_monitor_provider.dart  theme_provider.dart
lib/services/: api_service.dart  file_watcher_service.dart
lib/widgets/: drawer_3d.dart
linux/runner/: my_application.cc
web/: index.html  manifest.json
windows/runner/: main.cpp
(+28 files in other folders)
